Glibc Syllable Changelog

* December 23rd 2007 *

	o tld.c: Fix/implement TLD destructors. The destructor list is maintained correctly on a
	  per-thread basis. If a destructor is registered for a given TLD it will now be called
	  during free_tld() and passed the last value of the TLD.

* December 6th 2007 *

	o net/route.h: Removed. It conflicts with the system header.

* November 23rd 2007 *

	o bits/time.h: Include <posix/time.h> for the definition of CLOCKS_PER_SEC, don't redefine
	  it here.
	o bits/libc-lock.h: Provide __libc_lock_read() to get the scaler value of the lock. Required
	  for code that treats a __libc_once type as scaler I.e. sysdeps/posix/getaddrinfo.c
	o open_attrdir.c, open_indexdir.c, fopendir.c: Update to reflect the changes to the data member
	  in struct __dirstream
	o i386/sysdep.h: Define the macros PTR_MANGLE & PTR_DEMANGLE
	o i386/sysdep-cancel.h: New file. Define NO_CANCELLATION
	o sched_cpualloc.c: New file. Empty to stop posix/sched_cpualloc.c being build, which appears
	  to be Linux specific?

* November 22nd 2007 *

	o kernel-features.h: New file. Define some macros that are used elsewhere to select
	  functionality.

* March 27th 2007 *

	o settimeofday.c: New file. A replacement of the standard unix/sysv implementation. This
	  implementation allows high-resolution microsecond accuracy.
	o adjtime.c: New file.

* March 12th 2007 *

	o getrusage.c: Fixed a possible division by 0.

* Febuary 23rd 2007 *

	o readdir64.c: New file. Replaces stub for dirent/readdir64.c.

* Febuary 8th 2007 *

	o getrusage.c: New file. Simple stub, only useful for RUSAGE_SELF.
	o set_real_time.c: New file. The 64bit syscall argument is passed as two 32bit high/low parts. 

* May 26th 2006 *

	o Add-on configure & configure.in  are no longer required.

* May 25th 2006 *

	o Removed some non-Syllable syscalls from syscalls.list
		o sysinfo
		o swapon
		o swapoff
		o mknod

* January 6th 2006 *
