@@ -5,6 +5,10 @@ Glibc Syllable Changelog
 	o tld.c: Fix/implement TLD destructors. The destructor list is maintained correctly on a
 	  per-thread basis. If a destructor is registered for a given TLD it will now be called
 	  during free_tld() and passed the last value of the TLD.
+	o tld.c: Implemented __free_all_tlds(). All TLDs allocated to the calling thread will
+	  be freed and and TLD destructors will be called.
+	o exit_thread.c: New file. Call __free_all_tlds() before the exit_thread syscall.
+	o syscalls.list: Remove exit_thread
 
 * December 6th 2007 *
 
